# tekton-lsp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  check-tekton.py  go.mod  go.sum  shell.nix  test-codeactions.py  test-completion.py  test-definition.py  test-formatting.py  test-hover.py  test-symbols.py
.claude/: settings.local.json
cmd/tekton-lsp/: main.go
docs/: DECISION-RUST.md  LSP_USAGE.md  SETUP.md
docs/plans/: 2026-01-20-tekton-lsp-implementation.md  task-4-completion-plan.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
pkg/server/: server.go
src/: lib.rs  main.rs  server.rs
src/actions/: mod.rs  provider.rs
src/cache/: document.rs  mod.rs
src/completion/: mod.rs  provider.rs  schemas.rs
src/definition/: mod.rs  provider.rs
src/formatting/: mod.rs  provider.rs
src/hover/: docs.rs  mod.rs  provider.rs
src/parser/: ast.rs  mod.rs  yaml_parser.rs
src/symbols/: mod.rs  provider.rs
src/validator/: mod.rs  tekton.rs
src/workspace/: index.rs  mod.rs
tests/: e2e_codeactions.rs  e2e_completion.rs  e2e_definition.rs  e2e_diagnostics.rs  e2e_formatting.rs  e2e_hover.rs  e2e_symbols.rs
