[package]
name = "tekton-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Tekton LSP Contributors"]
description = "Language Server Protocol implementation for Tekton YAML files"
license = "Apache-2.0"
repository = "https://github.com/tektoncd/tekton-lsp"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# LSP Framework
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
